Fix missing margin in Header buttons

--- a/src/components/Home/Header/index.module.css
+++ b/src/components/Home/Header/index.module.css
@@ -97,7 +97,7 @@
       margin-top: 24px;
     }
 
-    button {
+    .button {
       margin-top: 8px;
 
       @media (--md-scr) {
